objects/HealthCloudGA__EhrPractitionerRole__c.object
<CustomObject>
    <description>Roles which this practitioner may perform for a given time period</description>
    <fields>
        <fullName>HealthCloudGA__EhrPractitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Practitioner this role applies to</description>
        <label>EHR Practitioner</label>
        <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
        <relationshipLabel>EHR Practitioner Roles</relationshipLabel>
        <relationshipName>PractitionerRoles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__EndDate__c</fullName>
        <description>End of period during which the practitioner is authorized to perform in these role(s)</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RoleCode__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Role Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RoleLabel__c</fullName>
        <description>Friendly name for Role</description>
        <label>Role Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RoleSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Role System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Specialty1Code__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Specialty1 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Specialty1Label__c</fullName>
        <label>Specialty1 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Specialty1System__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Specialty1 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Specialty2Code__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Specialty2 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Specialty2Label__c</fullName>
        <label>Specialty2 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Specialty2System__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Specialty2 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Specialty3Code__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Specialty3 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Specialty3Label__c</fullName>
        <label>Specialty3 Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Specialty3System__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Specialty3 System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__StartDate__c</fullName>
        <description>Beginnings of period during which the practitioner is authorized to perform in these role(s)</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>EHR Practitioner Role</label>
    <nameField>
        <displayFormat>PrR-{0}</displayFormat>
        <label>EHR Practitioner Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Practitioner Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>